feat: Implement dark mode and theme toggle
Adds a theme toggle to switch between light and dark modes. This improves accessibility and user preference customization. Also updates color palettes and styling to better support both themes.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         theme: {
           extend: {
             colors: {
-              primary: "#3b7ced",
-              "background-light": "#f8fafc",
+              primary: "#2463eb",
+              "background-light": "#f6f6f8",
             },
             fontFamily: {
               display: ["Inter", "sans-serif"],
@@ -40,7 +40,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-900">
+  <body class="bg-[#f6f6f8] text-slate-900">
     <div id="root"></div>
   </body>
 </html>
